Fix display issues on small viewports

--- a/src/blobdash/static/main.css
+++ b/src/blobdash/static/main.css
@@ -170,6 +170,8 @@ body {
         flex-direction: column;
         gap: 1rem;
         margin-block: 2rem;
+
+        overflow-y: scroll;
     
         @media (width < 650px) {
             display: none;
@@ -278,14 +280,28 @@ main {
             /6.875rem   auto;
 
         height: 10rem;
-        min-width: fit-content;
-        width: 25rem;
-        max-width: 100%;
 
+        @media (width < 400px) {
+            grid-template-columns: auto 0;
+        }
+        
+        @media (width > 400px) {
+            column-gap: 1.5rem;
+        }
+        
+        @media (width < 650px) {
+            width: 100%;
+        }
+        
+        @media (width >= 650px) {
+            min-width: fit-content;
+            width: 25rem;
+            max-width: 100%;
+        }
+        
         border: 1px solid var(--color-muted-1);
         border-radius: var(--radius);
         padding: 1.5rem;
-        column-gap: 1.5rem;
 
         transition:
             background-color 100ms,
@@ -300,6 +316,7 @@ main {
             grid-area: icon;
             height: 100%;
             align-self: center;
+            justify-self: center;
         }
         h3 {
             grid-area: name;
@@ -307,6 +324,10 @@ main {
             font-size: 3rem;
             font-weight: 700;
             display: inline;
+
+            @media (width < 400px) {
+                display: none;
+            }
         
             span {
                 font-size: 1.5rem;
@@ -322,6 +343,10 @@ main {
         }
         p {
             grid-area: desc;
+
+            @media (width < 400px) {
+                display: none;
+            }
         }
 
     }
